--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,52 @@
     color: white; }
     .contenedor1__link:hover {
       color: white; }
+
+.miniNav__img {
+  padding: 10px;
+  width: 30vh; }
+
+.mainNav {
+  justify-content: center;
+  font-family: "Open Sans", sans-serif;
+  text-decoration: none; }
+  .mainNav__item:hover {
+    text-decoration: underline; }
+
+.presentacion {
+  font-family: "Open Sans", sans-serif;
+  font-size: 2rem;
+  padding: 20px;
+  font-weight: bold;
+  color: #48adff; }
+  .presentacion__desc {
+    font-size: 1.2rem; }
+    .presentacion__desc--special {
+      color: #48adff; }
+
+.seleccionToken {
+  background-color: #48adff;
+  padding: 20px;
+  overflow: hidden; }
+  .seleccionToken__item {
+    margin: 20px;
+    overflow: hidden; }
+  .seleccionToken__img {
+    height: 250px;
+    transition: transform .2s;
+    overflow: hidden; }
+    .seleccionToken__img:hover {
+      transform: scale(1.1); }
+  .seleccionToken__boton {
+    background-color: #48adff;
+    border-color: #48adff; }
+
+.footer {
+  background-color: #e2e2e2;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold; }
+  .footer__img {
+    padding: 10px; }
+
+.instructivo {
+  background-color: #efeeef; }
