--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,3 +2,8 @@
 @import "./parciales/responsive";
 @import "./parciales/variables";
 @import "./parciales/contenedor1";
+@import "./parciales/navbar";
+@import "./parciales/presentacion";
+@import "./parciales/seleccionToken";
+@import "./parciales/footer";
+@import "./parciales/instructivo";
