--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,4 +6,6 @@
 @import "./parciales/presentacion";
 @import "./parciales/seleccionToken";
 @import "./parciales/footer";
-@import "./parciales/instructivo";
+@import "./parciales/safenet";
+@import "./parciales/seleccionOs";
+
