--- a/scss/parciales/_seleccionToken.scss
+++ b/scss/parciales/_seleccionToken.scss
@@ -16,12 +16,9 @@
         overflow: hidden;
 
         &:hover {
-            transform: scale(1.1); 
+            transform: scale(1.1);
+            cursor: pointer;
           }
     }
 
-    &__boton{
-        background-color: $color-celeste;
-        border-color: $color-celeste;
-    }
 }
