--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,4 +8,6 @@
 @import "./parciales/footer";
 @import "./parciales/safenet";
 @import "./parciales/seleccionOs";
+@import "./parciales/botonFaq";
+@import "./parciales/seccionfaq";
 
