--- a/css/main.css
+++ b/css/main.css
@@ -85,3 +85,44 @@
 
 .soimg:hover {
   cursor: pointer; }
+
+.btn-flotante {
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #ffffff;
+  border-radius: 5px;
+  border: solid black;
+  letter-spacing: 2px;
+  background-color: #48adff;
+  padding: 18px 25px;
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  transition: all 300ms ease 0ms;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  z-index: 99;
+  text-decoration: none; }
+
+.btn-flotante:hover {
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+  transform: translateY(-7px);
+  color: #ffffff; }
+
+@media only screen and (max-width: 600px) {
+  .btn-flotante {
+    font-size: 14px;
+    padding: 12px 20px;
+    bottom: 20px;
+    right: 20px; } }
+
+.faq {
+  background-color: white;
+  color: black;
+  font-family: "Open Sans", sans-serif; }
+  .faq__titulo {
+    font-size: 2rem;
+    color: #48adff;
+    font-weight: bold; }
+  .faq__preg {
+    font-weight: bold; }
