--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@
 
 .miniNav__img {
   padding: 10px;
-  width: 30vh; }
+  width: 40vh; }
 
 .mainNav {
   justify-content: center;
@@ -56,9 +56,11 @@
 .footer {
   background-color: #e2e2e2;
   font-family: "Open Sans", sans-serif;
-  font-weight: bold; }
+  font-weight: bold;
+  font-size: 0.7rem; }
   .footer__img {
-    padding: 10px; }
+    padding: 10px;
+    width: 30vh; }
 
 .row {
   padding: 15px; }
