--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,4 +10,5 @@
 @import "./parciales/seleccionOs";
 @import "./parciales/botonFaq";
 @import "./parciales/seccionfaq";
+@import "./parciales/volver";
 
